# monotron-apps

./: .gitignore  .travis.yml  Common.mk  Makefile  README.md  lib.c  lib_posix.c  monotron-app.ld  monotron.h  pixel grid.ods
6502_basic/: Makefile  cpu.c  cpu.h  main.c
examples/6502_basic/: Makefile  main.c
examples/chunky2/: Cargo.toml  Makefile
examples/chunky2/src/: main.rs
examples/chunkyfringe/: Cargo.toml  Makefile
examples/chunkyfringe/src/: main.rs
examples/hello_world_c/: Makefile
examples/monotron-slideshow/: Cargo.toml  Makefile  compress.py
examples/monotron-slideshow/.cargo/: config
examples/monotron-slideshow/examples/: accu2019.md  accu2019.rs  intro.md  intro.rs  oxidize2019.md  oxidize2019.rs  rustconf2019.md  rustconf2019.rs
examples/monotron-slideshow/src/: lib.rs
examples/oxidize/: Cargo.toml  Makefile
examples/oxidize/src/: main.rs
examples/snake/: Makefile  main.c  xbm_to_teletext.py
examples/tiny_basic/: Makefile  main.c  primes.bas  spaces.bas
examples/tune/: Cargo.toml  Makefile
examples/tune/src/: main.rs
hello_world_c/: Makefile  main.c
monotron-app/: Cargo.toml  Makefile  README.md  build.rs  monotron.h
monotron-app/.cargo/: config
monotron-app/examples/: panic.rs  simple.rs
monotron-app/src/: lib.rs  sdl_window.rs
monotron-slideshow/: Cargo.toml  Makefile  compress.py
monotron-slideshow/examples/: accu2019.rs  cch2019.md  cch2019.rs  intro.md  intro.rs
monotron-slideshow/src/: lib.rs  main.rs  presentation.md  slides.md
monotronian/: example_program.mb
oxidize/: Cargo.toml
oxidize/src/: main.rs
slide_show/: Makefile  main.c
snake/: Makefile  main.c  splash_screen.xbm
tiny_basic/: Makefile  main.c  squares.bas
