[package]
name = "monotron-app"
version = "0.5.1"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
readme = "README.md"
license-file = "LICENCE.md"
description = "Support crate for writing Monotron applications."
keywords = ["sdl2", "monotron", "embedded", "arm"]
repository = "https://github.com/thejpster/monotron-apps"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
print-panic = []

[target.'cfg(not(target_os = "none"))'.dependencies]
sdl2 = "0.32"
vga-framebuffer = "0.8.1"
lazy_static = "1.3"
