[package]
name = "monotron-app"
version = "0.5.1"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
readme = "README.md"
license-file = "LICENCE.md"
description = "Support crate for writing Monotron applications."
keywords = ["sdl2", "monotron", "embedded", "arm"]
repository = "https://github.com/thejpster/monotron-apps"
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
print-panic = []

[dependencies.monotron-api]
version = "0.2.0"
# path = "../../monotron/monotron-api"

[target.'cfg(not(target_os = "none"))'.dependencies]
sdl2 = "0.32"
vga-framebuffer = "0.8.1"
lazy_static = "1.3"
chrono = "0.4"
